2008-06-18

	* Build.PL:

	Stopped srezic from testing this module. Fails to process build requirement

2008-06-02

	* Build.PL:

	Made version a build requirement

2008-05-23

	* lib/IPC/SRLock.pm (POD):

	Improved POD. Added POD tests

2008-05-22

	* lib/IPC/SRLock/Fcntl.pm (_init):

	Replaced XML::Simple with Data::Serializer::Storable

