@@ -12,3 +12,4 @@ README
 t/02pod.t
 t/03podcoverage.t
 t/10base.t
+SIGNATURE    Added here by Module::Build
