@@ -1,9 +1,9 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.2808_01
+require 5.008;
 use File::Spec::Functions;
 my $found = 0;
 for (@INC) { if (-f catfile( $_, q(version.pm) )) { $found = 1; last } }
 exit 0 unless ($found);
-require 5.008;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
