@@ -1,3 +1,9 @@
+2008-09-06
+
+	* lib/IPC/SRLock.pm:
+
+	Tweaked POD. Bumping release to fix broken CPAN Testers database.
+
 2008-06-18
 
 	* Build.PL:
